--- a/index.html
+++ b/index.html
@@ -1,84 +1,127 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="./styles/home.css">
-		<title>Travel-Storm</title>
-	</head>
-	<body>
-		<main>		
-			<header>
-				<nav>
-					<div class="logo-container">
-						<img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency"> 
-					</div>
-					<div class="anchor-container flex-center">
-						<a href="index.html" class="hover">Home</a>
-						<a href="./pages/brussels.html" class="hover">Brussels</a>
-						<a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
-						<a href="./pages/newcastle.html" class="hover">Newcastle</a>
-						<a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
-					</div>
-				</nav>	
-			</header>
-			<section class="section-hero flex-center">
-				<div class="hero-text-container">
-					<h1>Travel like a storm!</h1>
-					<p>TravelStorm brings travelling quickly among chosen destination into as simple as any local trip,<br> choose your destination and dates and pack your bags!</p>
-					<button class="btn hover">Choose your Destination!</button>
-				</div>
-				<div class="hero-img-container flex-center">
-					<img src="./assets/images/home-images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
-				</div>
-			</section>
-			<section class="section-populars flex-center flex-column">
-				<div>
-					<h2>Our Most Popular Destinations!</h2>
-				</div>
-				<div class="populars-container flex-center">
-					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-images/home-popular-1.jpg" alt="An image of Brussels">
-						<p>Brussels</p>
-						<p></p>
-					</article>
-					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-images/home-popular-2.jpg" alt="An image of Kathmandu">
-						<p>Kathmandu</p>
-					</article>
-					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-images/home-popular-3.jpeg" alt="An image of Newcastle">
-						<p>NewCastle</p>
-					</article>
-					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv">
-						<p>Tel-Aviv</p>
-					</article>
-				</div>
-			</section>
-			<section class="section-testimonies flex-center flex-column">
-				<blockquote class="quote">
-					<q>I have found myself constantly prolonging my waste of time over a multi destination trip before, till I found TravelStorm and my life changed, the time it would take me to order my trip to the lake a few towns over, became the same time I would need to plan a trip through multiple countries, I was trully blown away thank you TravelStorm</q>
-				</blockquote>
-				<div class="customer">
-					<p>-Bruce</p>
-				</div>
-			</section>
-			<section class="cta-section flex-center">
-				<div class="flex-center flex-column">
-					<h3>Get Your Perfect Vacation Now!</h3>
-					<p>Sign up with us by clicking the button and enjoy your wildest vacation yet!</p>
-				</div>
-				<div>
-					<button class="btn hover">Sign Up!</button>
-				</div>
-			</section>
-			<footer class="flex-center">
-				<p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-			</footer>
-		</main>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./styles/home.css" />
+    <!-- favicon section -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon_io/favicon-16x16.png"
+    />
+    <!-- end -->
+    <title>Travel-Storm</title>
+  </head>
+  <body>
+    <main>
+      <header>
+        <nav>
+          <div class="logo-container">
+            <img
+              src="./assets/images/home-images/logo.png"
+              alt="logo of travelStorm agency"
+            />
+          </div>
+          <div class="anchor-container flex-center">
+            <a href="index.html" class="hover">Home</a>
+            <a href="./pages/brussels.html" class="hover">Brussels</a>
+            <a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
+            <a href="./pages/newcastle.html" class="hover">Newcastle</a>
+            <a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
+          </div>
+        </nav>
+      </header>
+      <section class="section-hero flex-center">
+        <div class="hero-text-container">
+          <h1>Travel like a storm!</h1>
+          <p>
+            TravelStorm brings travelling quickly among chosen destination into
+            as simple as any local trip,<br />
+            choose your destination and dates and pack your bags!
+          </p>
+          <button class="btn hover">Choose your Destination!</button>
+        </div>
+        <div class="hero-img-container flex-center">
+          <img
+            src="./assets/images/home-images/home-hero-image.jpeg"
+            alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out"
+          />
+        </div>
+      </section>
+      <section class="section-populars flex-center flex-column">
+        <div>
+          <h2>Our Most Popular Destinations!</h2>
+        </div>
+        <div class="populars-container flex-center">
+          <article class="flex-center flex-column hover">
+            <img
+              src="./assets/images/home-images/home-popular-1.jpg"
+              alt="An image of Brussels"
+            />
+            <p>Brussels</p>
+            <p></p>
+          </article>
+          <article class="flex-center flex-column hover">
+            <img
+              src="./assets/images/home-images/home-popular-2.jpg"
+              alt="An image of Kathmandu"
+            />
+            <p>Kathmandu</p>
+          </article>
+          <article class="flex-center flex-column hover">
+            <img
+              src="./assets/images/home-images/home-popular-3.jpeg"
+              alt="An image of Newcastle"
+            />
+            <p>NewCastle</p>
+          </article>
+          <article class="flex-center flex-column hover">
+            <img
+              src="./assets/images/home-images/home-popular-4.jpg"
+              alt="An image of Tel-Aviv"
+            />
+            <p>Tel-Aviv</p>
+          </article>
+        </div>
+      </section>
+      <section class="section-testimonies flex-center flex-column">
+        <blockquote class="quote">
+          <q
+            >I have found myself constantly prolonging my waste of time over a
+            multi destination trip before, till I found TravelStorm and my life
+            changed, the time it would take me to order my trip to the lake a
+            few towns over, became the same time I would need to plan a trip
+            through multiple countries, I was trully blown away thank you
+            TravelStorm</q
+          >
+        </blockquote>
+        <div class="customer">
+          <p>-Bruce</p>
+        </div>
+      </section>
+      <section class="cta-section flex-center">
+        <div class="flex-center flex-column">
+          <h3>Get Your Perfect Vacation Now!</h3>
+          <p>
+            Sign up with us by clicking the button and enjoy your wildest
+            vacation yet!
+          </p>
+        </div>
+        <div>
+          <button class="btn hover">Sign Up!</button>
+        </div>
+      </section>
+      <footer class="flex-center">
+        <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+      </footer>
+    </main>
+  </body>
 </html>
