--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -6,25 +6,34 @@
     <meta name="description" content="This is the page for brussels" />
     <meta name="author" content="Fabrice Elono" />
     <link rel="stylesheet" href="../styles/brussels.css" />
+    <!-- favicon section -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../assets/favicon_io/favicon-16x16.png"
+    />
+    <!-- end -->
     <title>Brussels</title>
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
-          <img src="../assets/logo.png" alt="logo of travelStorm agency" />
+          <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
+          <p>TravelStorm</p>
         </div>
-        <div class="anchor-container">
+        <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
-          <a href="./brussels.html">Brussels</a>
-          <a href="./kathmandu.html">Kathmandu</a>
-          <a href="./newcastle.html">Newcastle</a>
-          <a href="./telaviv.html">Tel-Aviv</a>
+          <a href="../pages/brussels.html" class="brussels-page">Brussles</a>
+          <a href="../pages/kathmandu.html" class="current-page">Kathmandu</a>
+          <a href="../pages/newcastle.html">Newcastle</a>
+          <a href="../pages/telaviv.html">Tel-Aviv</a>
         </div>
       </nav>
     </header>
     <main>
-      <h1>Belgium the land of fries</h1>
+      <h1>Belgium the heart of Europe</h1>
       <h3>
         Belgium, a European country, is known for its rich cultural heritage,
         famous for chocolate, waffles, and medieval towns, while also serving as
