--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -11,7 +11,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../assets/favicon_io/favicon-16x16.png"
+      href="../images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
     <title>Newcastle Upon Tyne</title>
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <div class="logo-container">
-          <img src="../assets/logo.png" alt="logo of travelStorm agency" />
+          <img src="../images/logo.png" alt="logo of travelStorm agency" />
         </div>
         <div class="anchor-container">
           <a href="../index.html">Home</a>
