--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/favicon_io/favicon-16x16.png"
+      href="./images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
     <title>Travel-Storm</title>
@@ -25,10 +25,11 @@
       <header>
         <nav>
           <div class="logo-container">
-            <img
-              src="./assets/images/home-images/logo.png"
+            <!-- <img
+              src="./images/logo.png"
               alt="logo of travelStorm agency"
-            />
+            /> -->
+            <p>TravelStorm</p>
           </div>
           <div class="anchor-container flex-center">
             <a href="index.html" class="hover">Home</a>
@@ -51,7 +52,7 @@
         </div>
         <div class="hero-img-container flex-center">
           <img
-            src="./assets/images/home-images/home-hero-image.jpeg"
+            src="./images/home-images/home-hero-image.jpeg"
             alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out"
           />
         </div>
@@ -63,7 +64,7 @@
         <div class="populars-container flex-center">
           <article class="flex-center flex-column hover">
             <img
-              src="./assets/images/home-images/home-popular-1.jpg"
+              src="./images/home-images/home-popular-1.jpg"
               alt="An image of Brussels"
             />
             <p>Brussels</p>
@@ -71,21 +72,21 @@
           </article>
           <article class="flex-center flex-column hover">
             <img
-              src="./assets/images/home-images/home-popular-2.jpg"
+              src="./images/home-images/home-popular-2.jpg"
               alt="An image of Kathmandu"
             />
             <p>Kathmandu</p>
           </article>
           <article class="flex-center flex-column hover">
             <img
-              src="./assets/images/home-images/home-popular-3.jpeg"
+              src="./images/home-images/home-popular-3.jpeg"
               alt="An image of Newcastle"
             />
             <p>NewCastle</p>
           </article>
           <article class="flex-center flex-column hover">
             <img
-              src="./assets/images/home-images/home-popular-4.jpg"
+              src="./images/home-images/home-popular-4.jpg"
               alt="An image of Tel-Aviv"
             />
             <p>Tel-Aviv</p>
