--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -25,7 +25,7 @@
         </div>
         <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
-          <a href="../pages/brussels.html" class="brussels-page">Brussles</a>
+          <a href="../pages/brussels.html" class="brussels-page">Brussels</a>
           <a href="../pages/kathmandu.html" class="current-page">Kathmandu</a>
           <a href="../pages/newcastle.html">Newcastle</a>
           <a href="../pages/telaviv.html">Tel-Aviv</a>
@@ -41,28 +41,99 @@
       </h3>
       <button>Read More</button>
     </main>
-    <h2>Main places to visit</h2>
     <section class="places">
-      <div>
-        <h5>Atomium</h5>
-        <img src="../images/brussels/atomium.jpg" alt="" />
+      <h2>Main places to visit</h2>
+      <div class="card-container">
+        <div class="card">
+          <img src="../images/brussels/antwerp2.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Museum Aan de Stroom</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/cinquantenaire.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Cinquantenaire Park</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/atomium.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Atomium</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
       </div>
-      <div>
-        <h5>King's palace</h5>
-        <img src="../images/brussels/palace.jpg" alt="" />
-      </div>
-      <div>
-        <h5>Grote Markt</h5>
-        <img src="../images/brussels/grotemarkt.jpg" alt="" />
+      <div class="card-container">
+        <div class="card">
+          <img src="../images/brussels/ghent.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Ghent</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/grotemarkt.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Grote Markt</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/portantwe.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Port of antwerp</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
+              obcaecati necessitatibus officia, in earum ut qui esse minima
+              dolores architecto doloremque, odio, quas fugiat.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
       </div>
     </section>
-    <section>
-      <h3>Why Brussels ?</h3>
-      <div>
-        <h5>Image</h5>
+    <section class="reasons-section">
+      <div class="content">
+        <h3>Why Brussels ?</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
+          voluptate autem voluptates corrupti reiciendis, aut in fugiat deleniti
+          ad, perferendis doloribus quae eligendi voluptas dicta qui quo, earum
+          voluptatibus? Inventore atque accusantium quidem numquam qui!
+        </p>
       </div>
+
+      <img src="../images/brussels/belgianflag.jpg" alt="image" />
     </section>
-    <section>
+    <section class="testimony">
       <h3>Testimony</h3>
     </section>
     <footer>
