removed unnecessary image div

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -35,7 +35,6 @@
     <header>
       <nav>
         <a class="logo-container" href="#top">
-          <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
           <p>TravelStorm</p>
         </a>
         <div class="anchor-container flex-center">
@@ -136,13 +135,11 @@
       <section class="details-section" id="swayambhunath">
         <h2>Swayambhunath Temple</h2>
         <div class="details-container">
-          <div class="image-container">
-            <img
+          <img
               src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg"
               alt="swayambunath temple the majestic stupa"
               loading="lazy"
-            />
-          </div>
+          />
           <div class="details-text-container">
             <p>
               Swayambhunath is a glorious ancient religious architecture,
@@ -208,34 +205,27 @@
             </div>
             <button>Book a Tour</button>
           </div>
-          <div class="image-container">
-            <img
+          <img
               src="../images/kathmandu/kathmandu_bhaktapur_durbar_square_details.jpg"
               alt="bhaktapur durbar square the palace of kings"
               loading="lazy"
             />
-          </div>
         </div>
       </section>
       <section class="details-section" id="narayanhiti-palace-museum">
         <h2>Narayanhiti Palace Museum</h2>
         <div class="details-container">
-          <div class="image-container">
-            <img
+          <img
               src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg"
               alt="narayanhiti royal palace museum the royal history of nepal"
               loading="lazy"
-            />
-          </div>
+          />
           <div class="details-text-container">
             <p>
               Narayanhiti Royal Palace Museum in Kathmandu unveils Nepal's regal
               history through ornate halls and curated exhibits of royal
               artifacts. Explore opulent living quarters, ceremonial spaces, and
-              a rich collection of historical treasures, offering a captivating
-              glimpse into the country's royal heritage. The museum, set amidst
-              landscaped gardens, invites visitors to step back in time and
-              experience the grandeur of Narayanhiti.
+              a collection of historical treasures, offering a glimpse into the country's royal heritage.
             </p>
             <div>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
@@ -293,25 +283,21 @@
             </div>
             <button>Book a Tour</button>
           </div>
-          <div class="image-container">
             <img
               src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg"
               alt="the holy temple of pashupatinath"
               loading="lazy"
             />
-          </div>
         </div>
       </section>
       <section class="details-section" id="kopan-monastry">
         <h2>Kopan Monastry</h2>
         <div class="details-container">
-          <div class="image-container">
             <img
               src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg"
               alt="Kopan Monastery: Tranquil Tibetan retreat"
               loading="lazy"
             />
-          </div>
           <div class="details-text-container">
             <p>
               Kopan Monastery, nestled in serene surroundings, is a tranquil
