changed logo to home link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               src="./images/logo.png"
               alt="logo of travelStorm agency"
             /> -->
-            <p>TravelStorm</p>
+            <a class="logo-anchor" href="index.html"><p>TravelStorm</p></a>
           </div>
           <div class="anchor-container flex-center">
             <a href="index.html" class="hover">Home</a>
