--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -22,7 +22,7 @@
         <div class="logo-container">
           <a href="#">
             <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
-            <p>TravelStorm</p>
+            <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
           </a>
         </div>
         <div class="anchor-container flex-center">
