--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <a class="logo-container" href="#top">
-                <p>TravelStorm</p>
+                <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
             </a>
             <div class="anchor-container flex-center">
                 <a href="../index.html">Home</a>
