--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -35,7 +35,7 @@
     <header>
       <nav>
         <a class="logo-container" href="#top">
-          <p>TravelStorm</p>
+          <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
         </a>
         <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
