--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <div class="logo-container">
-          <img src="../images/logo.png" alt="logo of travelStorm agency" />
+          <a class="logo-anchor" href="../index.html"><img src="../images/logo.png" alt="logo of travelStorm agency" /></a>
         </div>
         <div class="anchor-container">
           <a href="../index.html">Home</a>
