made the logo a link back home

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </nav>
       </header>
-      <section class="section-hero flex-center">
+      <section class="section-hero flex-center" id="hero">
         <div class="hero-text-container">
           <h1>Travel like a storm!</h1>
           <p>
@@ -48,7 +48,7 @@
             as simple as any local trip,<br />
             choose your destination and dates and pack your bags!
           </p>
-          <button class="btn hover">Choose your Destination!</button>
+          <a href="#cta" class="logo-anchor"><button class="btn hover">Choose your Destination!</button></a>
         </div>
         <div class="hero-img-container flex-center">
           <img
@@ -62,35 +62,35 @@
           <h2>Our Most Popular Destinations!</h2>
         </div>
         <div class="populars-container flex-center">
-          <article class="flex-center flex-column hover">
+          <a href="./pages/brussels.html" class="logo-anchor"><article class="flex-center flex-column hover">
             <img
               src="./images/home-images/home-popular-1.jpg"
               alt="An image of Brussels"
             />
             <p>Brussels</p>
             <p></p>
-          </article>
-          <article class="flex-center flex-column hover">
+          </article></a>
+          <a href="./pages/kathmandu.html" class="logo-anchor"><article class="flex-center flex-column hover">
             <img
               src="./images/home-images/home-popular-2.jpg"
               alt="An image of Kathmandu"
             />
             <p>Kathmandu</p>
-          </article>
-          <article class="flex-center flex-column hover">
+          </article></a>
+          <a href="./pages/newcastle.html" class="logo-anchor"><article class="flex-center flex-column hover">
             <img
               src="./images/home-images/home-popular-3.jpeg"
               alt="An image of Newcastle"
             />
             <p>NewCastle</p>
-          </article>
-          <article class="flex-center flex-column hover">
+          </article></a>
+          <a href="./pages/telaviv.html" class="logo-anchor"><article class="flex-center flex-column hover">
             <img
               src="./images/home-images/home-popular-4.jpg"
               alt="An image of Tel-Aviv"
             />
             <p>Tel-Aviv</p>
-          </article>
+          </article></a>
         </div>
       </section>
       <section class="section-testimonies flex-center flex-column">
@@ -108,7 +108,7 @@
           <p>-Bruce</p>
         </div>
       </section>
-      <section class="cta-section flex-center">
+      <section class="cta-section flex-center" id="cta">
         <div class="flex-center flex-column">
           <h3>Get Your Perfect Vacation Now!</h3>
           <p>
@@ -117,7 +117,7 @@
           </p>
         </div>
         <div>
-          <button class="btn hover">Sign Up!</button>
+          <a href="#hero" class="logo-anchor"><button class="btn hover">Sign Up!</button></a>
         </div>
       </section>
       <footer class="flex-center">
