--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="./pages/newcastle.html" class="hover">Newcastle</a>
             <a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
           </div>
+          <aside><a href="#"><i class="icon hover fa-solid fa-bars"></i></a></aside>
         </nav>
       </header>
       <section class="section-hero flex-center" id="hero">
@@ -117,7 +118,7 @@
             vacation yet!
           </p>
         </div>
-        <div>
+        <div class="flex-center">
           <a href="#hero" class="logo-anchor"><button class="btn hover">Sign Up!</button></a>
         </div>
       </section>
