added testimony section -brussels

--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is the page for brussels" />
     <meta name="author" content="Fabrice Elono" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-
+awesome/6.2.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="../styles/brussels.css" />
     <!-- favicon section -->
     <link
@@ -51,9 +57,10 @@
           <div class="card-content">
             <h3>Museum Aan de Stroom</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              Museum Aan de Stroom (MAS) stands as an architectural marvel in
+              Antwerp, offering captivating exhibits that delve into the city's
+              rich maritime history and cultural heritage. Explore its diverse
+              collections and panoramic views of the bustling harbor.
             </p>
             <button>Read more</button>
           </div>
@@ -63,9 +70,10 @@
           <div class="card-content">
             <h3>Cinquantenaire Park</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              Cinquantenaire Park, a symbol of grandeur and tranquility, invites
+              visitors to stroll amidst its lush greenery and majestic arches.
+              Discover its historical significance and enjoy leisurely picnics
+              while admiring the stunning Triumphal Arch.
             </p>
             <button>Read more</button>
           </div>
@@ -75,9 +83,10 @@
           <div class="card-content">
             <h3>Atomium</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              The Atomium, an iconic symbol of Brussels, offers an unforgettable
+              journey through its futuristic design and intriguing exhibitions.
+              Ascend to its panoramic spheres for breathtaking views of the city
+              and delve into the realms of science and innovation.
             </p>
             <button>Read more</button>
           </div>
@@ -89,9 +98,10 @@
           <div class="card-content">
             <h3>Ghent</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              Ghent enchants with its medieval charm and vibrant cultural scene.
+              Wander through cobblestone streets adorned with historic
+              architecture, explore its illustrious museums, and savor the
+              flavors of Belgian cuisine amidst a backdrop of timeless beauty.
             </p>
             <button>Read more</button>
           </div>
@@ -101,9 +111,10 @@
           <div class="card-content">
             <h3>Grote Markt</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              Grote Markt, the bustling central square of Brussels, exudes charm
+              with its ornate guildhalls and the stunning Town Hall. Immerse
+              yourself in the lively atmosphere, dine at quaint cafes, and
+              admire the exquisite architecture of this historic landmark.
             </p>
             <button>Read more</button>
           </div>
@@ -113,9 +124,10 @@
           <div class="card-content">
             <h3>Port of antwerp</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel
-              obcaecati necessitatibus officia, in earum ut qui esse minima
-              dolores architecto doloremque, odio, quas fugiat.
+              The Port of Antwerp, Europe's second-largest port, is a bustling
+              hub of trade and maritime activity. Witness the dynamic
+              waterfront, bustling with ships from around the world, and delve
+              into the port's fascinating history and modern operations.
             </p>
             <button>Read more</button>
           </div>
@@ -126,17 +138,34 @@
       <div class="content">
         <h3>Why Brussels ?</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
-          voluptate autem voluptates corrupti reiciendis, aut in fugiat deleniti
-          ad, perferendis doloribus quae eligendi voluptas dicta qui quo, earum
-          voluptatibus? Inventore atque accusantium quidem numquam qui!
+          Discover Brussels, where history blends with modernity, offering a
+          tapestry of cultural wonders, culinary delights, and architectural
+          marvels awaiting exploration.
         </p>
       </div>
 
       <img src="../images/brussels/belgianflag.jpg" alt="image" />
     </section>
     <section class="testimony">
-      <h3>Testimony</h3>
+      <div class="testimony-content">
+        <i class="fa-solid fa-quote-left"></i>
+        <div class="testimony-person">
+          <img src="../images/brussels/randomuser.jpg" alt="image" />
+          <div class="person-info">
+            <h3>James Usaka</h3>
+            <h5>Computer Science Student, Cameroon</h5>
+            <div class="testimony-text">
+              <h4>It was an amazing experience !!!</h4>
+              <p>
+                "I went in Brussels in 2023 were I had my exchange brussels it
+                is such a beautiful city it blends different cultures with
+                people coming from diverse places . I improved my French level
+                and I discovered Flemish as well"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
