--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -10,7 +10,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-
 awesome/6.2.0/css/all.min.css"
     />
-
     <link rel="stylesheet" href="../styles/brussels.css" />
     <!-- favicon section -->
     <link
@@ -167,8 +166,15 @@ awesome/6.2.0/css/all.min.css"
         </div>
       </div>
     </section>
-    <footer>
+    <footer class="flex-center flex-column">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+      <div class="flex-center">
+        <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+      </div>
     </footer>
   </body>
 </html>
