--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -40,7 +40,7 @@ awesome/6.2.0/css/all.min.css"
       </nav>
     </header>
     <main>
-      <h1>Belgium the heart of Europe</h1>
+      <h1>Belgium the <i class="fa-solid fa-heart"></i> of Europe</h1>
       <h3>
         Belgium, a European country, is known for its rich cultural heritage,
         famous for chocolate, waffles, and medieval towns, while also serving as
