fixed navbar logo

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -29,13 +29,13 @@
       href="../images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
-    <title>Kathmandu</title>
+    <title>Travel-Storm:Kathmandu</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="logo-container" href="#top">
-          <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
+        <a class="logo-container" href="../index.html">
+          TravelStorm
         </a>
         <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
