--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -19,8 +19,8 @@
 <body>
     <header>
         <nav>
-            <a class="logo-container" href="#top">
-                <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
+            <a class="logo-container" href="../index.html">
+                TravelStorm
             </a>
             <div class="anchor-container flex-center">
                 <a href="../index.html">Home</a>
