changed the mobile phone size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <!-- end -->
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
-    <title>Travel-Storm</title>
+    <title>TravelStorm</title>
   </head>
   <body>
     <main>
@@ -39,7 +39,6 @@
             <a href="./pages/newcastle.html" class="hover">Newcastle</a>
             <a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
           </div>
-          <aside><a href="#"><i class="icon hover fa-solid fa-bars"></i></a></aside>
         </nav>
       </header>
       <section class="section-hero flex-center" id="hero">
@@ -50,7 +49,7 @@
             as simple as any local trip,<br />
             choose your destination and dates and pack your bags!
           </p>
-          <a href="#cta" class="logo-anchor"><button class="btn hover">Choose your Destination!</button></a>
+          <a href="#populars" class="logo-anchor"><button class="btn hover">Choose your Destination!</button></a>
         </div>
         <div class="hero-img-container flex-center">
           <img
@@ -59,7 +58,7 @@
           />
         </div>
       </section>
-      <section class="section-populars flex-center flex-column">
+      <section class="section-populars flex-center flex-column" id="populars">
         <div>
           <h2>Our Most Popular Destinations!</h2>
         </div>
