--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -330,8 +330,15 @@
         </div>
       </section>
     </main>
-    <footer class="flex-center">
+    <footer class="flex-center flex-column">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+      <div class="flex-center">
+          <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+        </div>
     </footer>
   </body>
 </html>
