--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -39,7 +39,7 @@
         </a>
         <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
-          <a href="../pages/brussels.html">Brussles</a>
+          <a href="../pages/brussels.html">Brussels</a>
           <a href="../pages/kathmandu.html" class="current-page">Kathmandu</a>
           <a href="../pages/newcastle.html">Newcastle</a>
           <a href="../pages/telaviv.html">Tel-Aviv</a>
